--- a/index.html
+++ b/index.html
@@ -1,208 +1,257 @@
-<script runat="server">
+<!doctype html>
+<html lang="en">
 
-    Platform.Load("core", "1");
-    Platform.Response.SetResponseHeader("Strict-Transport-Security","max-age=200");
-   Platform.Response.SetResponseHeader("X-XSS-Protection","1; mode=block");
-   Platform.Response.SetResponseHeader("X-Frame-Options","Deny");
-   Platform.Response.SetResponseHeader("X-Content-Type-Options","nosniff");
-   Platform.Response.SetResponseHeader("Referrer-Policy","strict-origin-when-cross-origin");
-   Platform.Response.SetResponseHeader("Content-Security-Policy","default-src 'self'");
-    var options = {
-        "DataExtension" : "autoGenaratedForm"
-    }
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    var attributes = {
-        "FirstName" : {
-            "Type": "Text",
-            "Pattern": "",
-            "Label": "First name",
-            "Required": false,
-            "Placeholder": "Enter your first name"
-        },
-  
-        "EmailAddress": {
-            "Type": "Email",
-            "Pattern": "^([a-zA-Z0-9_\\-\\.]+)@([a-zA-Z0-9_\\-\\.]+)\\.([a-zA-Z]{2,})$",
-            "Label": "Email",
-            "Required": false,
-            "Placeholder": "Enter your email"
-        }
- 
-    }
 
-    var submit = (Request.Method() == "POST") ? true : false ;
-    var success = (!!isNotEmpty(Request.GetQueryStringParameter("success"))) ? true : false ;
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="%%=CloudPagesURL(7844)=%%">
 
-    if(!!submit) {
 
-        var insert = insertInDataExtension(options);
+    <title>Preference center</title>
 
-        Redirect(getPageURL() + "?success=1", true);
+    <link rel="shortcut icon" type="image/x-icon"
+        href="https://image.s10.sfmc-content.com/lib/fe4715707564047e761471/m/1/e47a902b-80db-48dc-bc12-57f995bce5bf.png" />
+    <script runat=server>
+        Platform.Response.SetResponseHeader("Strict-Transport-Security", "max-age=200");
+        Platform.Response.SetResponseHeader("X-XSS-Protection", "1; mode=block");
+        Platform.Response.SetResponseHeader("X-Frame-Options", "Deny");
+        Platform.Response.SetResponseHeader("X-Content-Type-Options", "nosniff");
+        Platform.Response.SetResponseHeader("Referrer-Policy", "strict-origin-when-cross-origin");
+        Platform.Response.SetResponseHeader("Content-Security-Policy", "default-src 'self' https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css https://image.s10.sfmc-content.com/lib/fe4715707564047e761471/m/1/e47a902b-80db-48dc-bc12-57f995bce5bf.png");
+    </script>
 
-    } else if(!!success) {
 
-        Write("<strong>Thank you for submitting<strong><br><a href='" + getPageURL() + "'>Restart</a>");
+</head>
 
-    } else {
+<body class="d-flex flex-column min-vh-100">
 
-        buildForm(options, attributes);
+    <header class=" text-center bg-dark text-white  d-flex align-items-center justify-content-center mb-md-5">
+        <h1 class="">lorem ipsum</h1>
+    </header>
 
-    }
+    <section class="text-center  d-flex flex-column align-items-center justify-content-center">
 
-    function insertInDataExtension(options) {
 
-        var fields = {};
-        var list = getFieldNames(options.DataExtension);
-        var de_name = options.DataExtension;
+        <script runat="server">
 
-        for (n in list) {
-            var name = list[n];
-            var val = (Request.GetFormField(list[n]) != null) ? Request.GetFormField(list[n]) : "";
-            fields[name] = val;
-        }
+            Platform.Load("core", "1");
 
-        fields["Id"] = timestamp();
+            var options = {
+                "DataExtension": "autoGenaratedForm"
+            }
 
-        var insert = splitKeysValues(fields);
+            var attributes = {
+                "FirstName": {
+                    "Type": "Text",
+                    "Pattern": "",
+                    "Label": "First name",
+                    "Required": false,
+                    "Placeholder": "Enter your first name"
+                },
 
-        Platform.Function.InsertData(de_name, insert.Keys, insert.Values);
-
-        return insert;
-
-    }
-
-    function buildForm(options, attributes) {
-
-        var html = "";
-        var fields = getFieldNames(options.DataExtension);
-
-        html += "<form action='" + getPageURL() + "' method='post'>";
-        html += buildFields(fields, attributes);
-        html += "<br>";
-        html += "<button>Send</button>";
-        html += "</form>"; 
-
-        Write(html);
-
-    }
-
-    function buildFields(fields, attributes) {
-
-        var html = "";
-        var exceptions = ["Id"];
-
-        for (n in fields) {
-
-            var field = attributes[fields[n]];
-            var name = fields[n];
-
-            if (field != null) {
-
-                var required = (field.Required != false) ? "required" : "";
-                var pattern = (!!isNotEmpty(field.Pattern)) ? "pattern='" + field.Pattern + "'" : "";
-                var label = (!!isNotEmpty(field.Label)) ? "<label for='" + name + "' >" + field.Label + ((required.length > 0) ? " *" : "") + "</label>" : "";
-                var placeholder = field.Placeholder;
-                var type = field.Type.toLowerCase();
-
-                html += label + "<br>";
-                html += "<input name='" + name + "' type='" + type + "' " + pattern + " placeholder='" + placeholder + "' " + required + ">" + "<br>";
-
-            } else if(!inArray(exceptions,name)) {
-
-                html += "<label for='" + name + "' >" + name + "</label>" + "<br>";
-                html += "<input name='" + name + "' type='text'>" + "<br>";
+                "EmailAddress": {
+                    "Type": "Email",
+                    "Pattern": "^([a-zA-Z0-9_\\-\\.]+)@([a-zA-Z0-9_\\-\\.]+)\\.([a-zA-Z]{2,})$",
+                    "Label": "Email",
+                    "Required": false,
+                    "Placeholder": "Enter your email"
+                }
 
             }
-            
-        }  
 
-        return html;
-    }
+            var submit = (Request.Method() == "POST") ? true : false;
+            var success = (!!isNotEmpty(Request.GetQueryStringParameter("success"))) ? true : false;
 
-    function getFieldNames(de_name) {
+            if (!!submit) {
 
-        var out = [];
-        var attr = DataExtension.Retrieve({ Property: "Name", SimpleOperator: "equals", Value: de_name });
-        var de = DataExtension.Init(attr[0].CustomerKey);
-        var fields = de.Fields.Retrieve();
+                var insert = insertInDataExtension(options);
 
-        if(fields.length > 0) {
-            fields.sort(function (a, b) { return (a.Ordinal > b.Ordinal) ? 1 : -1 });
-            for (k in fields) {
-                if (!strStartsWith(fields[k].Name, "_") && fields[k].Name.toLowerCase()!=="id") out = out.concat(fields[k].Name);
+                Redirect(getPageURL() + "?success=1", true);
+
+            } else if (!!success) {
+
+                Write("<strong>Thank you for submitting<strong><br><a href='" + getPageURL() + "'>Restart</a>");
+
+            } else {
+
+                buildForm(options, attributes);
+
             }
-        }    
 
-        return out;
+            function insertInDataExtension(options) {
 
-    } 
+                var fields = {};
+                var list = getFieldNames(options.DataExtension);
+                var de_name = options.DataExtension;
 
-    function splitKeysValues(fields) {
+                for (n in list) {
+                    var name = list[n];
+                    var val = (Request.GetFormField(list[n]) != null) ? Request.GetFormField(list[n]) : "";
+                    fields[name] = val;
+                }
 
-        var out = {
-            "Keys": [],
-            "Values": []
-        }
-        for (k in fields) {
-            var v = fields[k];
-            out.Keys.push(k);
-            out.Values.push(v);
-        }
-        return out;
-    }
+                fields["Id"] = timestamp();
 
-    function getPageURL() {
+                var insert = splitKeysValues(fields);
 
-        var page = Platform.Request.RequestURL;
+                Platform.Function.InsertData(de_name, insert.Keys, insert.Values);
 
-        if (page.indexOf("?") > 0) {
-            var out = page.substring(0, page.indexOf("?"));
-        } else {
-            var out = page;
-        }
+                return insert;
 
-        return out;
-    }
+            }
 
-    function strStartsWith(str, search, pos) {
-        pos = !pos || pos < 0 ? 0 : +pos;
-        return str.substring(pos, pos + search.length) === search;
-    }   
+            function buildForm(options, attributes) {
 
-    function inArray(arr, k) {
-        var out = -1;
-        for (var i in arr) {
-            if (arr[i] == k) out = i;
-        }
-        return out;
-    }
+                var html = "";
+                var fields = getFieldNames(options.DataExtension);
 
-    function isNotEmpty(val) {
-        return (val != null && val.length > 0);
-    }
+                html += "<form action='" + getPageURL() + "' method='post'>";
+                html += buildFields(fields, attributes);
+                html += "<br>";
+                html += "<button>Send</button>";
+                html += "</form>";
 
-    function timestamp() {
+                Write(html);
 
-        var now = new Date();
-        var out = now.getFullYear()
-            + addZero(now.getMonth() + 1)
-            + addZero(now.getDate())
-            + addZero(now.getHours())
-            + addZero(now.getMinutes())
-            + addZero(now.getSeconds())
-            + random(100, 999);
-        return out;
+            }
 
-        function addZero(n) {
-            return n < 10 ? '0' + n : n
-        }
+            function buildFields(fields, attributes) {
 
-        function random(min, max) {
-            min = Math.ceil(min);
-            max = Math.floor(max);
-            return Math.floor(Math.random() * (max - min)) + min;
-        }
+                var html = "";
+                var exceptions = ["Id"];
 
-    }
+                for (n in fields) {
 
-</script>
+                    var field = attributes[fields[n]];
+                    var name = fields[n];
+
+                    if (field != null) {
+
+                        var required = (field.Required != false) ? "required" : "";
+                        var pattern = (!!isNotEmpty(field.Pattern)) ? "pattern='" + field.Pattern + "'" : "";
+                        var label = (!!isNotEmpty(field.Label)) ? "<label for='" + name + "' >" + field.Label + ((required.length > 0) ? " *" : "") + "</label>" : "";
+                        var placeholder = field.Placeholder;
+                        var type = field.Type.toLowerCase();
+
+                        html += label + "<br>";
+                        html += "<input name='" + name + "' type='" + type + "' " + pattern + " placeholder='" + placeholder + "' " + required + ">" + "<br>";
+
+                    } else if (!inArray(exceptions, name)) {
+
+                        html += "<label for='" + name + "' >" + name + "</label>" + "<br>";
+                        html += "<input name='" + name + "' type='text'>" + "<br>";
+
+                    }
+
+                }
+
+                return html;
+            }
+
+            function getFieldNames(de_name) {
+
+                var out = [];
+                var attr = DataExtension.Retrieve({ Property: "Name", SimpleOperator: "equals", Value: de_name });
+                var de = DataExtension.Init(attr[0].CustomerKey);
+                var fields = de.Fields.Retrieve();
+
+                if (fields.length > 0) {
+                    fields.sort(function (a, b) { return (a.Ordinal > b.Ordinal) ? 1 : -1 });
+                    for (k in fields) {
+                        if (!strStartsWith(fields[k].Name, "_") && fields[k].Name.toLowerCase() !== "id") out = out.concat(fields[k].Name);
+                    }
+                }
+
+                return out;
+
+            }
+
+            function splitKeysValues(fields) {
+
+                var out = {
+                    "Keys": [],
+                    "Values": []
+                }
+                for (k in fields) {
+                    var v = fields[k];
+                    out.Keys.push(k);
+                    out.Values.push(v);
+                }
+                return out;
+            }
+
+            function getPageURL() {
+
+                var page = Platform.Request.RequestURL;
+
+                if (page.indexOf("?") > 0) {
+                    var out = page.substring(0, page.indexOf("?"));
+                } else {
+                    var out = page;
+                }
+
+                return out;
+            }
+
+            function strStartsWith(str, search, pos) {
+                pos = !pos || pos < 0 ? 0 : +pos;
+                return str.substring(pos, pos + search.length) === search;
+            }
+
+            function inArray(arr, k) {
+                var out = -1;
+                for (var i in arr) {
+                    if (arr[i] == k) out = i;
+                }
+                return out;
+            }
+
+            function isNotEmpty(val) {
+                return (val != null && val.length > 0);
+            }
+
+            function timestamp() {
+
+                var now = new Date();
+                var out = now.getFullYear()
+                    + addZero(now.getMonth() + 1)
+                    + addZero(now.getDate())
+                    + addZero(now.getHours())
+                    + addZero(now.getMinutes())
+                    + addZero(now.getSeconds())
+                    + random(100, 999);
+                return out;
+
+                function addZero(n) {
+                    return n < 10 ? '0' + n : n
+                }
+
+                function random(min, max) {
+                    min = Math.ceil(min);
+                    max = Math.floor(max);
+                    return Math.floor(Math.random() * (max - min)) + min;
+                }
+
+            }
+
+        </script>
+
+    </section>
+
+    <footer class=" text-center bg-dark text-white  d-flex align-items-center justify-content-center mt-auto ">
+        <div>
+            ©mm
+        </div>
+    </footer>
+
+
+
+
+
+</body>
