--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="%%=CloudPagesURL(7844)=%%">
 
 
-    <title>Preference center</title>
+    <title>delete form</title>
 
     <link rel="shortcut icon" type="image/x-icon"
         href="https://image.s10.sfmc-content.com/lib/fe4715707564047e761471/m/1/e47a902b-80db-48dc-bc12-57f995bce5bf.png" />
@@ -29,7 +29,21 @@
         Platform.Response.SetResponseHeader("Content-Security-Policy", "default-src 'self' https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css https://image.s10.sfmc-content.com/lib/fe4715707564047e761471/m/1/e47a902b-80db-48dc-bc12-57f995bce5bf.png");
     </script>
 
+<style>
+    body
+    {
 
+ /* fallback for old browsers */
+ background: #30cfd0;
+
+/* Chrome 10-25, Safari 5.1-6 */
+background: -webkit-linear-gradient(to right, rgba(48, 207, 208, 0.5), rgba(51, 8, 103, 0.5));
+
+/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: linear-gradient(to right, rgba(48, 207, 208, 0.5), rgba(51, 8, 103, 0.5))
+
+    }
+</style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
