--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ background: linear-gradient(to right, rgba(48, 207, 208, 0.5), rgba(51, 8, 103, 
 
 <body class="d-flex flex-column min-vh-100">
 
-    <header class=" text-center bg-info text-white  d-flex align-items-center justify-content-center mb-md-5">
+    <header class=" text-center bg-transparent text-white  d-flex align-items-center justify-content-center mb-md-5">
         <h1 class="">delete form</h1>
     </header>
 
