--- a/index.html
+++ b/index.html
@@ -64,20 +64,20 @@ background: linear-gradient(to right, rgba(48, 207, 208, 0.5), rgba(51, 8, 103, 
             }
 
             var attributes = {
-                "FirstName": {
+                "subscriberkey": {
                     "Type": "Text",
                     "Pattern": "",
-                    "Label": "First name",
-                    "Required": false,
-                    "Placeholder": "Enter your first name"
+                    "Label": "subscriberkey",
+                    "Required": true,
+                    "Placeholder": "Enter your subscriberkey"
                 },
 
-                "EmailAddress": {
-                    "Type": "Email",
-                    "Pattern": "^([a-zA-Z0-9_\\-\\.]+)@([a-zA-Z0-9_\\-\\.]+)\\.([a-zA-Z]{2,})$",
-                    "Label": "Email",
+                "reason": {
+                    "Type": "reason",
+                    "Pattern": "",
+                    "Label": "reason",
                     "Required": false,
-                    "Placeholder": "Enter your email"
+                    "Placeholder": "Enter reason"
                 }
 
             }
