--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="%%=CloudPagesURL(7961)=%%">
 
 
-    <title>delete form</title>
+    <title >delete form</title>
 
     <link rel="shortcut icon" type="image/x-icon"
         href="https://image.s10.sfmc-content.com/lib/fe4715707564047e761471/m/1/e47a902b-80db-48dc-bc12-57f995bce5bf.png" />
@@ -30,27 +30,14 @@
     </script>
 
 <style>
-    body
-    {
 
- /* fallback for old browsers */
- background: #30cfd0;
-
-/* Chrome 10-25, Safari 5.1-6 */
-bbackground: -webkit-linear-gradient(to right, rgba(48, 207, 208, 0.5), rgba(51, 8, 103, 0.5));
-
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-bbackground: linear-gradient(to right, rgba(48, 207, 208, 0.5), rgba(51, 8, 103, 0.5));
-
- font-family: "Copperplate";
-    }
 </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
 
     <header class=" text-center bg-transparent text-white  d-flex align-items-center justify-content-center mb-md-5">
-        <h1 class="">delete form </h1>
+        <h1 class="display-1 font-weight-bold">Subscriber delete form: </h1>
     </header>
 
     <section class="text-center  d-flex flex-column align-items-center justify-content-center">
