--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     "Pattern": "",
                     "Label": "subscriberkey",
                     "Required": true,
-                    "Placeholder": "Enter your subscriberkey"
+                    "Placeholder": "Enter subscriberkey"
                 },
 
                 "reason": {
@@ -81,7 +81,7 @@
 
             } else if (!!success) {
 
-                Write("<strong>Thank you for submitting<strong><br><a href='" + getPageURL() + "'>Restart</a>");
+                Write("<strong class='h2'>Thank you for submitting<strong><br><a class='h2' href='" + getPageURL() + "'>Restart</a>");
 
             } else {
 
