--- a/delete.html
+++ b/delete.html
@@ -44,7 +44,7 @@
             var result = HTTP.Post(deleteUrl, contentType, payload1, headerNames, headerValues);
             var parsedResult = Stringify(Platform.Function.ParseJSON(result.Response[0]));
             //does not work
-            Write("code                 "   +Stringify(result.operationInitiated));
+            Write("code                 "   +Stringify(result));
             Write(parsedResult);
             Platform.Function.InsertData("mmApiDeleteResponse", ["code"], [parsedResult]);
 
