--- a/delete.html
+++ b/delete.html
@@ -42,7 +42,7 @@
             var headerValues = [s1.concat(accessToken)];
             var result = HTTP.Post(deleteUrl, contentType, payload1, headerNames, headerValues);
             var parsedResult = Stringify(Platform.Function.ParseJSON(result.Response[0]));
-
+            Write(parsedResult);
 
 
             if (result.StatusCode == 200) {
