--- a/delete.html
+++ b/delete.html
@@ -36,7 +36,7 @@
             var payload1 =
                 '{"deleteOperationType": "ContactAndAttributes","values": [' + subKeysString + ' ]}';
 
-
+                Write(payload1);
             var headerNames = ["Authorization"];
             var s1 = "Bearer ";
             var headerValues = [s1.concat(accessToken)];
