--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             function buildFields(fields, attributes) {
 
                 var html = "";
-                var exceptions = ["Id"];
+                var exceptions = ["Id", "isProcessed"];
 
                 for (n in fields) {
 
