--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
     </section>
 
-    <footer class=" text-center bg-info text-white  d-flex align-items-center justify-content-center mt-auto ">
+    <footer class=" text-center bg-info text-white  d-flex align-items-center justify-content-center navbar fixed-bottom ">
         <div>
             ©mm
         </div>
