--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
             } else if (!!success) {
                 if (successValue == true) {
-                    Write("<strong class='h2'>Thank you for submitting<strong><br><a class='h2' href='" + getPageURL() + "'>Restart</a>");
+                    Write("<strong class='h2'>Thank you for submitting</strong><br><a class='h2' href='" + getPageURL() + "'>Restart</a>");
                 }
                 else {
-                    Write("<strong class='h2'>Sorry, something went wrong.<strong><br><a class='h2' href='" + getPageURL() + "'>Restart</a>");
+                    Write("<strong class='h2'>Sorry, something went wrong.</strong><br><a class='h2' href='" + getPageURL() + "'>Restart</a>");
                 }
 
             } else {
