--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 html += "<form action='" + getPageURL() + "' method='post' class=' border rounded border-info bg-info p-1 p-md-3 m-1 mt-md-1 mr-md-5 ml-md-5 mb-md-0 col col-11 col-md-6 text-center'>";
                 html += buildFields(fields, attributes);
                 html += "<br>";
-                html += "<button class=' btn-white  text-info rounded align-self-center'>Send</button>";
+                html += "<button class=' btn-light  text-info rounded align-self-center'>Send</button>";
                 html += "</form>";
 
                 Write(html);
